[*] base: инспекция кода.